--- a/src/components/blog/GridItem.astro
+++ b/src/components/blog/GridItem.astro
@@ -1,8 +1,8 @@
 ---
 import { APP_BLOG } from 'astrowind:config';
 import type { Post } from '~/types';
-
-import Image from '~/components/common/Image.astro';
+import type { ImageMetadata } from 'astro';
+import { Picture } from 'astro:assets';
 
 import { findImage } from '~/utils/images';
 import { getPermalink } from '~/utils/permalinks';
@@ -25,29 +25,27 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
       image &&
         (link ? (
           <a href={link}>
-            <Image
-              src={image}
+            <Picture
+              src={image as ImageMetadata}
               class="w-full md:h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
-              widths={[400, 900]}
+              formats={['avif', 'webp']}
+              layout="constrained"
               width={400}
-              sizes="(max-width: 900px) 400px, 900px"
+              height={225}
               alt={post.title}
-              aspectRatio="16:9"
-              layout="cover"
               loading="lazy"
               decoding="async"
             />
           </a>
         ) : (
-          <Image
-            src={image}
-            class="w-full md:h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
-            widths={[400, 900]}
+            <Picture
+              src={image as ImageMetadata}
+              class="w-full md:h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
+            formats={['avif', 'webp']}
+            layout="constrained"
             width={400}
-            sizes="(max-width: 900px) 400px, 900px"
+            height={225}
             alt={post.title}
-            aspectRatio="16:9"
-            layout="cover"
             loading="lazy"
             decoding="async"
           />
