--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -1,7 +1,7 @@
 ---
 import type { ImageMetadata } from 'astro';
 import { Icon } from 'astro-icon/components';
-import Image from '~/components/common/Image.astro';
+import { Picture } from 'astro:assets';
 import PostTags from '~/components/blog/Tags.astro';
 
 import { APP_BLOG } from 'astrowind:config';
@@ -30,14 +30,14 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
         <a class="relative block group" href={link ?? 'javascript:void(0)'}>
           <div class="relative h-0 pb-[56.25%] md:pb-[75%] md:h-72 lg:pb-[56.25%] overflow-hidden bg-gray-400 dark:bg-slate-700 rounded shadow-lg">
             {image && (
-              <Image
-                src={image}
+              <Picture
+                src={image as ImageMetadata}
                 class="absolute inset-0 object-cover w-full h-full mb-6 rounded shadow-lg bg-gray-400 dark:bg-slate-700"
-                widths={[400, 900]}
+                formats={['avif', 'webp']}
+                layout="constrained"
                 width={900}
-                sizes="(max-width: 900px) 400px, 900px"
+                height={506}
                 alt={post.title}
-                aspectRatio="16:9"
                 loading="lazy"
                 decoding="async"
               />
@@ -47,14 +47,14 @@ const link = APP_BLOG?.post?.isEnabled ? getPermalink(post.permalink, 'post') : 
       ) : (
         <div class="relative h-0 pb-[56.25%] md:pb-[75%] md:h-72 lg:pb-[56.25%] overflow-hidden bg-gray-400 dark:bg-slate-700 rounded shadow-lg">
           {image && (
-            <Image
-              src={image}
+            <Picture
+              src={image as ImageMetadata}
               class="absolute inset-0 object-cover w-full h-full mb-6 rounded shadow-lg bg-gray-400 dark:bg-slate-700"
-              widths={[400, 900]}
+              formats={['avif', 'webp']}
+              layout="constrained"
               width={900}
-              sizes="(max-width: 900px) 400px, 900px"
+              height={506}
               alt={post.title}
-              aspectRatio="16:9"
               loading="lazy"
               decoding="async"
             />
