--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -1,7 +1,8 @@
 ---
 import { Icon } from 'astro-icon/components';
+import type { ImageMetadata } from 'astro';
 
-import Image from '~/components/common/Image.astro';
+import { Picture } from 'astro:assets';
 import PostTags from '~/components/blog/Tags.astro';
 import SocialShare from '~/components/common/SocialShare.astro';
 
@@ -72,14 +73,14 @@ const { post, url } = Astro.props;
 
       {
         post.image ? (
-          <Image
-            src={post.image}
+          <Picture
+            src={post.image as ImageMetadata}
             class="max-w-full lg:max-w-[900px] mx-auto mb-6 sm:rounded-md bg-gray-400 dark:bg-slate-700"
-            widths={[400, 900]}
-            sizes="(max-width: 900px) 400px, 900px"
-            alt={post?.excerpt || ''}
+            formats={['avif', 'webp']}
+            layout="constrained"
             width={900}
             height={506}
+            alt={post?.excerpt || ''}
             loading="eager"
             decoding="async"
           />
