--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import Image from '~/components/common/Image.astro';
+import { Picture } from 'astro:assets';
 import Button from '~/components/ui/Button.astro';
 
 import type { Hero as Props } from '~/types';
@@ -80,10 +80,11 @@ const {
               {typeof image === 'string' ? (
                 <Fragment set:html={image} />
               ) : (
-                <Image
+                // @ts-expect-error image contains src and alt from props
+                <Picture
                   class="mx-auto rounded-md w-full"
-                  widths={[400, 768, 1024, 2040]}
-                  sizes="(max-width: 767px) 400px, (max-width: 1023px) 768px, (max-width: 2039px) 1024px, 2040px"
+                  formats={['avif', 'webp']}
+                  layout="constrained"
                   loading="eager"
                   width={1024}
                   height={576}
