--- a/src/components/widgets/Steps.astro
+++ b/src/components/widgets/Steps.astro
@@ -2,7 +2,7 @@
 import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
 import Timeline from '~/components/ui/Timeline.astro';
 import Headline from '~/components/ui/Headline.astro';
-import Image from '~/components/common/Image.astro';
+import { Picture } from 'astro:assets';
 import type { Steps as Props } from '~/types';
 
 const {
@@ -41,13 +41,12 @@ const {
           {typeof image === 'string' ? (
             <Fragment set:html={image} />
           ) : (
-            <Image
+            <Picture
               class="inset-0 object-cover object-top w-full rounded-md shadow-lg md:absolute md:h-full bg-gray-400 dark:bg-slate-700"
-              widths={[400, 768]}
-              sizes="(max-width: 768px) 100vw, 432px"
+              formats={['avif', 'webp']}
+              layout="constrained"
               width={432}
               height={768}
-              layout="cover"
               src={image?.src}
               alt={image?.alt || ''}
             />
